fix issues in pom