@@ -48,16 +48,15 @@
     <sonatype.release.url>https://oss.sonatype.org/content/repositories/releases/</sonatype.release.url>
     <sonatype.staging.url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</sonatype.staging.url>
     <sonatype.release.args />
-
     <!-- Managed common dependency versions -->
-    <aspectj.version>1.9.21.2</aspectj.version>
+    <aspectj.version>1.9.22</aspectj.version>
 
     <active-mq.version>6.1.4</active-mq.version>
     <xstream.version>1.4.21</xstream.version>
 
-    <jakarta.jms.version>3.1.0</jakarta.jms.version>
-    <junit.version>5.5.1</junit.version>
-    <mockito.version>5.15.2</mockito.version>
+    <jms-api.version>3.1.0</jms-api.version>
+    <junit.version>5.11.2</junit.version>
+    <mockito.version>3.12.4</mockito.version>
 
     <log4j.version>2.24.3</log4j.version>
     <slf4j.version>2.0.16</slf4j.version>
@@ -67,8 +66,7 @@
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-lang3.version>3.17.0</commons-lang3.version>
     <commons-math.version>3.6.1</commons-math.version>
-    <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
-    <!-- <javax-annotations.version>1.3.2</javax-annotations.version> -->
+    <jakarta-annotations.version>3.0.0</jakarta-annotations.version>
     <jopt-simple.version>5.0.4</jopt-simple.version>
 
     <!-- Managed common plugin versions -->
@@ -76,7 +74,7 @@
     <maven-compiler.source>${java.version}</maven-compiler.source>
     <maven-compiler.target>${java.version}</maven-compiler.target>
 
-    <maven-aspectj.version>1.14.0</maven-aspectj.version>
+    <maven-aspectj.version>1.15.0</maven-aspectj.version>
     <maven-aspectj.compliance>${java.version}</maven-aspectj.compliance>
 
     <maven-antrun.version>3.1.0</maven-antrun.version>
@@ -189,13 +187,7 @@
       <dependency>
         <groupId>jakarta.annotation</groupId>
         <artifactId>jakarta.annotation-api</artifactId>
-        <version>${jakarta.annotation.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.jms</groupId>
-        <artifactId>jakarta.jms-api</artifactId>
-        <version>${jakarta.annotation.version}</version>
+        <version>${jakarta-annotations.version}</version>
       </dependency>
 
       <!-- AspectJ -->
@@ -293,8 +285,8 @@
       <!-- Utilities -->
 
       <dependency>
-        <groupId>javax.jms</groupId>
-        <artifactId>javax.jms-api</artifactId>
+        <groupId>jakarta.jms</groupId>
+        <artifactId>jakarta.jms-api</artifactId>
         <version>${jms-api.version}</version>
       </dependency>
 
@@ -508,7 +500,10 @@
             </includes>
             <trimStackTrace>false</trimStackTrace>
             <useSystemClassLoader>false</useSystemClassLoader>
-            <argLine>--illegal-access=warn</argLine>
+            <argLine>
+              --illegal-access=warn
+              --add-opens java.base/java.util=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
 
